--- a/src/components/SearchForm/style.css
+++ b/src/components/SearchForm/style.css
@@ -6,7 +6,7 @@
 }
 
 .search-button {
-  background-image: url(Image/loop2.png);
+  /* background-image: url(assets/styles/loop2.css); */
   background-color: transparent;
   background-size: cover;
   background-repeat: no-repeat;
@@ -26,17 +26,24 @@
 .search-input-group {
   display: flex;
   align-items: center;
+  border: solid 1px rgb(255, 255, 255);
+  border-radius: 10px;
+  padding: 5px;
+  background-color: white;
 }
 
 .search-options {
   list-style-type: none;
+
 }
+
 .search-options-container {
   display: none;
 }
 
 .search-options-container__enabled {
   display: block;
+  background-color: white;
 }
 
 .search-options li:hover {
@@ -47,4 +54,10 @@
   outline: 2px solid black;
   border-radius: 0.5em;
   padding: 10px;
+  background-color: white;
 }
+
+.loop {
+  width: 20px;
+}
+
