--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,6 +1,6 @@
 @import url(../../assets/styles/variables.css);
 
-.header {
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
