--- a/src/components/Product/style.css
+++ b/src/components/Product/style.css
@@ -1,10 +1,4 @@
-:root {
-  --header-color: rgb(131, 208, 182);
-  --card_product-color: rgb(200, 214, 232);
-  --button_hover-color: rgb(147, 196, 180);
-  --background_hover-color: #e6e6e6;
-  --background-muter-index: 999;
-}
+@import url(../../assets/styles/variables.css);
 
 .product {
   display: grid;
