--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -7,7 +7,7 @@ header {
   background-color: var(--header-color);
   box-shadow: 0px 1px 8px rgb(106, 106, 106);
   height: 9vh;
-  overflow: hidden;
+  /* overflow: hidden; */
   margin-bottom: 1em;
   position: sticky;
   top: 0;
