--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -7,24 +7,40 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  height: 100%; 
+}
+
+.navigation-icons {
+  height: 100%;
 }
 
 .navigation-icons img {
   height: 60%;
-  padding: 15px;
+  /* padding: 15px; */
   transition: box-shadow 0.3s ease-in-out;
 }
 
-.navigation-icons img:hover {
+.icons-designations:hover {
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
 
-.navigation-icons img:active {
+.icons-designations:active {
   transform: translateY(2px);
   box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.3) inset;
 }
 
-.icons-header {
-  display: block;
+.icons-box {
+  display: flex;
   height: 9vh;
+  align-items    : center;
+  justify-content: center;
+}
+
+.icons-designations {
+  display: block;
+  box-sizing     : border-box;
+  text-decoration: none;
+  height         : 100%;
+  padding        : 0 0.4em;
+  margin         : 0;
 }
