--- a/src/components/Product/style.css
+++ b/src/components/Product/style.css
@@ -33,3 +33,24 @@
 .product-details h3 {
   margin-bottom: 25px;
 }
+
+.product-details button {
+  margin-top: 25px;
+  font-size: 105%;
+  width: 100%;
+  height: 4vh;
+  max-width: 150px;
+  background-color: var(--header-color);
+  border-radius: 5px;
+  border: none;
+  transition: box-shadow 0.01s ease-in-out, transform 0.01s ease-in-out;
+}
+
+.product-details button:hover {
+  background-color: var(--button_hover-color);
+}
+
+.product-details button:active {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  transform: scale(0.95);
+}
