edited the login form
place the product card separately in a separate folder

fix form position

fix components in router instead pages (#2)

--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -2,6 +2,8 @@
   --header-color: rgb(131, 208, 182);
   --card_product-color: rgb(200, 214, 232);
   --button_hover-color: rgb(147, 196, 180);
+  --button_submit_color: rgb(226, 252, 243);
+  --background_elements_color: rgb(204, 230, 223);
   --background_hover-color: #e6e6e6;
   --background-muter-index: 999;
 }
