--- a/src/components/Login/style.css
+++ b/src/components/Login/style.css
@@ -1,23 +1,32 @@
 .container {
   display: flex;
-  background-color: var(--card_product-color);
+  background-color: var(--background_elements_color);
   border: 1px solid black;
   border-radius: 15px;
-  width: fit-content;
-  justify-content: center; /* Center content horizontally */
+  width: 40%;
+  justify-content: center;
   padding: 10px;
   position: relative;
-  top: 50%; /* Adjust as needed */
-  left: 50%; /* Adjust as needed */
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   margin: 15rem 0;
   font-size: 130%;
+}
+
+.label-form {
+  margin-top: 1em;
 }
 
 .form-content {
   padding: 5px;
   display: flex;
   flex-direction: column;
+  width: 80%;
+}
+
+.form-content h3 {
+  margin-top: 1em;
 }
 
 .form-content label {
@@ -26,5 +35,71 @@
 
 .form-content input {
   border-radius: 5px;
-  height: 1.5rem;
+  height: 1.7rem;
+}
+
+.login-button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.login-button {
+  border-radius: 5px;
+  transition: transform 0.01s;
+  margin-top: 1.5em;
+  width: 50%;
+  height: 2rem;
+  background-color: var(--button_submit_color);
+  font-size: 105%;
+}
+
+.login-button:active {
+  transform: scale(0.98);
+}
+
+.forgot-password {
+  color: inherit;
+  text-decoration: none;
+  float: right;
+  margin-left: auto;
+  font-size: 90%;
+  margin-top: 0.4em;
+}
+
+.forgot-password:hover {
+  color: rgb(101, 101, 101);
+}
+
+.forgot-password:active {
+  transform: translateY(1px);
+}
+
+/* .register-link {
+  color: inherit;
+  text-decoration: none;
+  font-size: 115%;
+}
+
+.register-link:hover {
+  color: rgb(101, 101, 101);
+}
+
+.register-link:active {
+  transform: translateY(1px);
+} */
+
+.register-button {
+  border-radius: 5px;
+  transition: transform 0.01s;
+  margin-top: 0.5em;
+  width: 50%;
+  height: 2rem;
+  background-color: var(--button_submit_color);
+  font-size: 105%;
+}
+
+.register-button:active {
+  transform: scale(0.98);
 }
