change basket items

--- a/src/components/Product/style.css
+++ b/src/components/Product/style.css
@@ -1,4 +1,4 @@
-@import url(../../assets/styles/variables.css);
+/* @import url(../../assets/styles/variables.css);
 
 .product {
   display: grid;
@@ -53,4 +53,4 @@
 .product-details button:active {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
   transform: scale(0.95);
-}
+} */
