--- a/src/components/Basket/style.css
+++ b/src/components/Basket/style.css
@@ -1,30 +1,30 @@
 .basket-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .product-details {
   display: flex;
-  flex-direction: row;
-  padding: 30px;
+  justify-content: space-between;
+  height: 100%;
+  padding: 0.5em 1em;
   border-radius: 20px;
   border: solid 1px black;
   margin: 0 20px 20px 20px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: var(--card_product-color);
-  width: 70%;
+  background-color: var(--background_elements_color);
 }
 
 .product-details-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 0 1em;
 }
 
 .product-details-info h2 {
   display: flex;
   justify-content: center;
-  margin-bottom: 5%;
 }
 
 .product-description {
@@ -33,5 +33,30 @@
 }
 
 .product-details img {
-  width: 30%;
+  width: 4em;
+}
+
+.product-details button {
+  margin: 10px;
+  font-size: 105%;
+  width: 1.5em;
+  height: 4vh;
+  background-color: var(--header-color);
+  border-radius: 5px;
+  border: none;
+  transition: box-shadow 0.01s ease-in-out, transform 0.01s ease-in-out;
+}
+
+.product-details button:hover {
+  background-color: var(--button_hover-color);
+}
+
+.product-quantity {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.total-price {
+  margin: 0 3em;
 }
