--- a/src/components/Product/style.css
+++ b/src/components/Product/style.css
@@ -1,6 +1,6 @@
-@import url(../../assets/styles/variables.css);
+/* @import url(../../assets/styles/variables.css);
 
-.product {
+.product-content {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
@@ -13,7 +13,7 @@
   transition: transform 0.3s ease-in-out;
 }
 
-.product:hover {
+.product-content:hover {
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
   background-color: #f9f9f9;
 }
@@ -53,4 +53,4 @@
 .product-details button:active {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
   transform: scale(0.95);
-}
+} */
