--- a/src/components/ProductList/style.css
+++ b/src/components/ProductList/style.css
@@ -1,7 +1,78 @@
-.content {
+@import url(../../assets/styles/variables.css);
+
+/* .product-list-content {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   gap: 10px;
   padding: 20px;
+} */
+
+.product-content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, minmax(0, 1fr));
+  gap: 10px;
+  padding: 20px;
+  /* display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: var(--card_product-color);
+  gap: 10px;
+  border: 1px solid rgb(211, 211, 211);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  padding: 10px;
+  transition: transform 0.3s ease-in-out; */
+}
+
+/* .product-content:hover {
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  background-color: #f9f9f9;
+} */
+
+.product-image {
+  height: 90%;
+  width: 90%;
+  object-fit: contain;
+}
+
+/* .product {
+  height: 40vh;
+} */
+
+.product-details {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: var(--card_product-color);
+  gap: 10px;
+  border: 1px solid rgb(211, 211, 211);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  padding: 10px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.product-details h3 {
+  margin-bottom: 25px;
+}
+
+.product-buttons button {
+  margin-top: 25px;
+  font-size: 105%;
+  width: 100%;
+  height: 4vh;
+  max-width: 150px;
+  background-color: var(--header-color);
+  border-radius: 5px;
+  border: none;
+  transition: box-shadow 0.01s ease-in-out, transform 0.01s ease-in-out;
+}
+
+.product-details button:hover {
+  background-color: var(--button_hover-color);
+}
+
+.product-details button:active {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  transform: scale(0.95);
 }
