change body color

--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -6,4 +6,5 @@
   --background_elements_color: rgb(204, 230, 223);
   --background_hover-color: #e6e6e6;
   --background-muter-index: 999;
+  --background-page: rgb(252, 255, 255);
 }
