--- a/src/components/Basket/style.css
+++ b/src/components/Basket/style.css
@@ -3,7 +3,7 @@
   flex-direction: row;
 }
 
-.product-details {
+.product-basket-details {
   display: flex;
   flex-direction: row;
   padding: 30px;
