--- a/src/components/ProductList/style.css
+++ b/src/components/ProductList/style.css
@@ -43,9 +43,9 @@
 .product-details {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: var(--card_product-color);
+  /* background-color: var(--card_product-color); */
   gap: 10px;
-  border: 1px solid rgb(211, 211, 211);
+  border: 2px solid rgb(211, 211, 211);
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   padding: 10px;
